--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -10,6 +10,7 @@
   - [[#syadem-setup][Syadem Setup]]
   - [[#home-setup][Home Setup]]
   - [[#default-setup][Default Setup]]
+  - [[#default-mirror-setup][Default Mirror Setup]]
 - [[#startup][STARTUP]]
   - [[#desktop-portals][Desktop-Portals]]
   - [[#wallpaper][Wallpaper]]
@@ -64,7 +65,6 @@ or
 If you want to mirror a display, add a =,mirror,[NAME]= at the end of the monitor rule, examples:
 
 ~monitor = DP-3,1920x1080@60,0x0,1,mirror,DP-2~
-~monitor = ,preferred,auto,1,mirror,DP-1~
 
 ** Example
 ~monitor = eDP-1,1920x1080@60,0x0,1~
@@ -75,24 +75,28 @@ If you want to mirror a display, add a =,mirror,[NAME]= at the end of the monito
 ** Laptop Screen
 #+begin_src conf
 monitor = eDP-1,1920x1080@60,0x0,1
-workspace = eDP-1,1
+workspace = eDP-1,2
 #+end_src
 
 ** Syadem Setup
 #+begin_src conf
-monitor = AOC Q3279WG5B 0x0000652C,preferred,1920x0,1
-workspace = AOC Q3279WG5B 0x0000652C,2
+monitor = des:AOC Q3279WG5B 0x0000652C,preferred,1920x0,1
 #+end_src
 
-** TODO Home Setup
+** Home Setup
 #+begin_src conf
-# monitor = HDMI-A-1,preferred,-19200x0,1
-# workspace = HDMI-A-1,1
+monitor = desc:Iiyama North America PL2390 11298JH100680 ,preferred,-1920x0,1
 #+end_src
 
 ** Default Setup
 #+begin_src conf
-monitor=,preferred,auto,1
+monitor = ,preferred,auto,1
+workspace = HDMI-A-1,1
+#+end_src
+
+** Default Mirror Setup
+#+begin_src conf
+# monitor = ,preferred,auto,1,mirror,DP-1
 #+end_src
 
 * STARTUP
