--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -493,8 +493,8 @@ bind = SUPERSHIFTCTRL,S,exec,grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 0000
 #+begin_src conf
 bind = SUPER,Q,killactive,
 bind = CTRLALT,Delete,exit,
-bind = SUPER,F,fullscreen,0
-bind = SUPERCTRL,F,fullscreen, 1
+bind = SUPER,F,fullscreen,1
+bind = SUPERSHIFT,F,fullscreen, 0
 bind = SUPER,Space,togglefloating,
 bind = SUPERSHIFT,Space,togglesplit,
 bind = SUPER,S,pseudo,
