--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -19,7 +19,6 @@
   - [[#startup-script][Startup Script]]
   - [[#blue-light][Blue-Light]]
   - [[#bluetooth][Bluetooth]]
-  - [[#sleep][Sleep]]
   - [[#polkit][Polkit]]
   - [[#wal][Wal]]
 - [[#input][INPUT]]
@@ -140,11 +139,6 @@ exec = hyprshade auto
 Make sure you have installed =blueman=
 #+begin_src conf
 exec-once = blueman-applet
-#+end_src
-
-** Sleep
-#+begin_src conf
-exec-once = swayidle -w timeout 300 '~/.config/hypr/scripts/sleep' before-sleep '~/.config/hypr/scripts/sleep'
 #+end_src
 
 ** Polkit
@@ -479,6 +473,7 @@ bind = ,XF86AudioNext,exec,playerctl next
 bind = ,XF86AudioPrev,exec,playerctl previous
 bind = ,XF86AudioPlay,exec,playerctl play-pause
 bind = ,XF86AudioStop,exec,playerctl stop
+bind = ,XF86PowerOff,exec,$lockscreen
 #+end_src
 
 ** Screenshots
