--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -179,6 +179,8 @@ input {
 
 * GENERAL
 #+begin_src conf
+source = ~/.cache/wal/colors-hyprland.conf
+
 general {
     # main_mod = SUPER
 
@@ -196,8 +198,11 @@ general {
     # col.inactive_border = rgba(44475aaa)
 
     # Nord Theme
-    col.active_border = rgb(88c0d0)
-    col.inactive_border = rgba(44475aaa)
+    # col.active_border = rgb(88c0d0)
+    # col.inactive_border = rgba(44475aaa)
+
+    col.active_border = $color1
+    col.inactive_border = $color0
 
     # damage_tracking = full # leave it on full unless you hate your GPU and want to make it suffer
     apply_sens_to_raw = 0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
