--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -197,7 +197,7 @@ general {
     gaps_in = 3
     gaps_out = 7
 
-    border_size = 3
+    border_size = 4
 
     # Dracula Theme
     # col.active_border = rgb(bd93f9)
@@ -226,8 +226,11 @@ group {
     # col.group_border_active = rgb(bd93f9)
 
     # Nord Theme
-    col.border_active = rgb(88c0d0)
-    col.border_inactive = rgba(282a36dd)
+    # col.border_active = rgb(88c0d0)
+    # col.border_inactive = rgba(282a36dd)
+
+    col.border_active = $color1
+    col.border_inactive = $color0
 }
 #+end_src
 
@@ -420,7 +423,6 @@ windowrule = opacity 0.90 override 0.90 override, .*
 $term = terminator
 $term1 = kitty
 $term2 = alacritty
-$wifimenu = ~/.config/wofi/wifimenu.sh
 $wallpapermenu = ~/.config/wofi/wallpaper.sh
 $thememenu = ~/.config/wofi/theme.sh
 $appmenu = ~/.config/hypr/scripts/menu
@@ -460,7 +462,6 @@ bind = SUPERSHIFT,N,exec,swaync-client -t -sw
 
 ** Wofi
 #+begin_src conf
-bind = ALT,F1,exec,$wifimenu
 bind = SUPER,D,exec,$appmenu
 bind = SUPER,X,exec,$powermenu
 bind = SUPER,W,exec,$wallpapermenu
