--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -148,7 +148,7 @@ exec-once = blueman-applet
 #+begin_src conf
 exec-once = swayidle -w \
             timeout 240 'brightnessctl --save; brightnessctl set 20%' \
-            timeout 300 'notify-send Going to sleep in less a minute' \
+            timeout 300 'notify-send "Going to sleep in less a minute"' \
             timeout 360 '~/.config/hypr/scripts/sleep' \
                 resume 'brightnessctl --restore' \
             before-sleep '~/.config/hypr/scripts/lockscreen'
