--- a/README.org
+++ b/README.org
@@ -11,16 +11,16 @@ All my dotfiles for Hyprland config
 - [[https://hg.sr.ht/~scoopta/wofi][wofi]]
 - [[https://github.com/Alexays/Waybar][waybar]]
 - [[https://github.com/Horus645/swww][sww]]
-- [[https://github.com/emersion/mako][mako]]
+- [[https://github.com/ErikReider/SwayNotificationCenter][SwayNotificationCenter]]
 - [[https://github.com/doomemacs/doomemacs][Doom Emacs]]
 
 ** Dependencies
-- [[https://github.com/dylanaraps/pywal][pywal]] (Theme based on your background)
+- [[https://github.com/dylanaraps/pywal][pywal]] (Create theme based on your background)
 
 ** Themes
 + Nord
 + Dracula
-+ Background based(pywal)
++ Background based (pywal)
 
   For theme based on you background you need to install =pywal= and add a custom template for Hyprland
 
