--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -60,7 +60,7 @@ Configure your Display resolution, offset, scale and Monitors here, use `hyprctl
 
 ~monitor = name,resolution,position,scale~
 or
-~monitor = description_from_hyprctl_monitors,resolution,position,scale~
+~monitor = desc:description_from_hyprctl_monitors,resolution,position,scale~
 
 *Mirrored displays*
 If you want to mirror a display, add a =,mirror,[NAME]= at the end of the monitor rule, examples:
@@ -75,29 +75,30 @@ If you want to mirror a display, add a =,mirror,[NAME]= at the end of the monito
 
 ** Laptop Screen
 #+begin_src conf
-monitor = eDP-1,1920x1080@60,0x0,1
-workspace = eDP-1,2
+monitor = eDP-1, 1920x1080@60, 0x0,1
+workspace = eDP-1, 2
 #+end_src
 
 ** Syadem Setup
 #+begin_src conf
-monitor = des:AOC Q3279WG5B 0x0000652C,preferred,1920x0,1
+monitor = desc:AOC Q3279WG5B 0x0000652C, preferred, 1920x0, 1
+monitor = desc:AOC U32E2WG6 QELM5JA000186, preferred, 1920x0, 1.5
 #+end_src
 
 ** Home Setup
 #+begin_src conf
-monitor = desc:Iiyama North America PL2390 11298JH100680 ,preferred,-1920x0,1
+monitor = desc:Iiyama North America PL2390 11298JH100680, preferred, -1920x0, 1
 #+end_src
 
 ** Default Setup
 #+begin_src conf
-monitor = ,preferred,auto,1
-workspace = HDMI-A-1,1
+monitor = ,preferred, auto, 1
+workspace = HDMI-A-1, 1
 #+end_src
 
 ** Default Mirror Setup
 #+begin_src conf
-# monitor = ,preferred,auto,1,mirror,DP-1
+# monitor = , preferred, auto, 1, mirror, eDP-1
 #+end_src
 
 * STARTUP
@@ -265,14 +266,10 @@ decoration {
     fullscreen_opacity=0.9
 
     blur {
-        enabled = true
-        xray = false
-
         size = 5 # minimum 1
         passes = 2 # minimum 1, more passes = more resource intensive.
 
-        ignore_opacity = true
-        new_optimizations = true
+        ignore_opacity = false
     }
 
     # Dim
@@ -483,8 +480,8 @@ bind = SUPERSHIFTCTRL,S,exec,grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 0000
 #+begin_src conf
 bind = SUPER,Q,killactive,
 bind = CTRLALT,Delete,exit,
-bind = SUPER,F,fullscreen,1
-bind = SUPERSHIFT,F,fullscreen, 0
+bind = SUPER,F,fullscreen, 0
+bind = SUPERSHIFT,F,fullscreen,1
 bind = SUPER,Space,togglefloating,
 bind = SUPERSHIFT,Space,togglesplit,
 bind = SUPER,S,pseudo,
