--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -107,9 +107,8 @@ exec-once = ~/.config/hypr/scripts/desktop-portals.sh
 
 ** Wallpaper (SWWW)
 #+begin_src conf
-exec-once = swww init
 exec-once = swww img ~/.config/hypr/wallpapers/nature-blue-simplist.jpg
-# exec-once = swww init; swww kill; swww init
+exec-once = swww init; swww kill; swww init
 #+end_src
 
 ** Notifications
@@ -434,8 +433,8 @@ bind = $mainMod SHIFT, T ,exec,$files
 bind = $mainMod SHIFT, E ,exec,$editor
 bind = $mainMod SHIFT, I ,exec,$editor-everywhere
 bind = $mainMod SHIFT, W ,exec,$browser
-bind = $mainMod SHIFT, S, exec,XDG_CURRENT_DESKTOP="gnome" gnome-control-center
 bind = $mainMod SHIFT, N, exec, swaync-client -t -sw
+bind = $mainMod CTRL, S, exec,XDG_CURRENT_DESKTOP="gnome" gnome-control-center
 bind = CTRL SHIFT, Escape, exec, btop
 #+end_src
 
