[ADD] xwaylandvideobridge startup

--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -22,6 +22,7 @@
   - [[#polkit][Polkit]]
   - [[#wal][Wal]]
   - [[#network-manager][Network-Manager]]
+  - [[#xwaylandvideobridge][XWaylandVideoBridge]]
 - [[#input][INPUT]]
 - [[#general][GENERAL]]
 - [[#group][GROUP]]
@@ -168,6 +169,11 @@ exec-once = wal -R
 Make sure you havc installed =network-manager-applet=
 #+begin_src conf
 exec-once = nm-applet --indicator
+#+end_src
+
+** XWaylandVideoBridge
+#+begin_src conf
+exec-once = xwaylandvideobridge
 #+end_src
 
 * INPUT
