--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -145,13 +145,7 @@ exec-once = blueman-applet
 + Sleep, after 360sec
 + Before sleep lock screen
 #+begin_src conf
-exec-once = swayidle -w \
-            timeout 240 'brightnessctl --save; brightnessctl set 20%' \
-                resume 'brightnessctl --restore' \
-            timeout 300 'notify-send "Going to sleep in less a minute"' \
-            before-sleep '~/.config/hypr/scripts/lockscreen'
-            timeout 360 '~/.config/hypr/scripts/sleep' \
-            before-sleep '~/.config/hypr/scripts/lockscreen'
+exec-once = swayidle -w timeout 240 'brightnessctl --save; brightnessctl set 20%' resume 'brightnessctl --restore' timeout 300 'notify-send "Going to sleep in less a minute"' timeout 360 '~/.config/hypr/scripts/sleep' before-sleep '~/.config/hypr/scripts/lockscreen'
 #+end_src
 
 ** Polkit
