--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -77,7 +77,7 @@ If you want to mirror a display, add a =,mirror,[NAME]= at the end of the monito
 ** Laptop Screen
 #+begin_src conf
 monitor = eDP-1, 1920x1080@60, 0x0,1
-workspace = eDP-1, 2
+workspace = eDP-1, 1
 #+end_src
 
 ** Syadem Setup
@@ -93,9 +93,10 @@ monitor = desc:Iiyama North America PL2390 11298JH100680, preferred, -1920x0, 1
 
 ** Default Setup
 #+begin_src conf
-monitor = ,preferred, auto, 1
+monitor = ,1920x1080@60, 1920x0, 1
+# monitor = ,preferred, auto, 1
 # monitor = , preferred, auto, 1, mirror, eDP-1 # Mirror
-workspace = HDMI-A-1, 1
+workspace = HDMI-A-1, 2
 #+end_src
 
 * STARTUP
