--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -332,6 +332,7 @@ master {
 gestures {
     workspace_swipe = yes
     workspace_swipe_fingers = 3
+    workspace_swipe_create_new = true
 }
 #+end_src
 
