--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -244,6 +244,12 @@ group {
 
     groupbar {
        enabled = true
+       gradients = false
+       render_titles = false
+
+       # Wait for 0.35 version
+       # height = 20
+
        col.active = $color1
        col.inactive = $color0
     }
@@ -565,6 +571,7 @@ bind = $mainMod CTRL, J, resizeactive, 0 20
 #+end_src
 
 ** Workspaces
+*** Focus
 #+begin_src conf
 bind = $mainMod, ampersand, workspace, 1
 bind = $mainMod, eacute, workspace, 2
@@ -575,12 +582,7 @@ bind = $mainMod, minus, workspace, 6
 bind = $mainMod, egrave, workspace, 7
 bind = $mainMod, underscore, workspace, 8
 
-# Move workspace to diffrent monitor
-bind=$mainMod ALT,h,movecurrentworkspacetomonitor,l
-bind=$mainMod ALT,j,movecurrentworkspacetomonitor,p
-bind=$mainMod ALT,k,movecurrentworkspacetomonitor,u
-bind=$mainMod ALT,l,movecurrentworkspacetomonitor,r
-
+# Wait for 0.35 version
 # bind = $mainMod, ampersand, focusworkspaceoncurrentmonitor, 1
 # bind = $mainMod, eacute, focusworkspaceoncurrentmonitor, 2
 # bind = $mainMod, quotedbl, focusworkspaceoncurrentmonitor, 3
@@ -589,6 +591,15 @@ bind=$mainMod ALT,l,movecurrentworkspacetomonitor,r
 # bind = $mainMod, minus, focusworkspaceoncurrentmonitor, 6
 # bind = $mainMod, egrave, focusworkspaceoncurrentmonitor, 7
 # bind = $mainMod, underscore, focusworkspaceoncurrentmonitor, 8
+#+end_src
+
+*** Move
+Move workspace to different monitor
+#+begin_src conf
+bind=$mainMod ALT,h,movecurrentworkspacetomonitor,l
+bind=$mainMod ALT,j,movecurrentworkspacetomonitor,p
+bind=$mainMod ALT,k,movecurrentworkspacetomonitor,u
+bind=$mainMod ALT,l,movecurrentworkspacetomonitor,r
 #+end_src
 
 ** Send to Workspaces
@@ -622,5 +633,5 @@ env = XDG_SESSION_TYPE=wayland
 env = XDG_SESSION_DESKTOP=Hyprland
 
 exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 #+end_src
